--- a/getTemp_copy.html
+++ b/getTemp_copy.html
@@ -34,7 +34,7 @@
             
             function getTempApi(){
          //fetch post request
-         fetch("https://api.openweathermap.org/data/2.5/weather?q=" + city + "&units=metric&appid=2b01c90e8fece8a7aa7834752360349a",{
+         fetch(" https://cors-anywhere.herokuapp.com/https://api.openweathermap.org/data/2.5/weather?q=" + city + "&units=metric&appid=2b01c90e8fece8a7aa7834752360349a",{
             method:'POST',
             body:JSON.stringify({
                 city:city,
